# mutual-credit

./: .gitignore  .hc  Cargo.toml  DESIGN.md  README.md  flake.nix  package-lock.json  package.json
.github/workflows/: release.yml
applet/: package.json  vite.config.ts
applet/demo/: index.html
applet/src/: applet-main.ts  cross-applet-main.ts  index.ts  mutual-credit-applet-main.ts
applet/workdir/: web-happ.yaml
apps/lets-we-game/ui/: package.json
apps/lets-we-game/workdir/: dna.yaml
apps/lets-we-game/zomes/lets/: Cargo.toml
apps/lets-we-game/zomes/lets/src/: lib.rs
apps/lets-we-game/zomes/lets/tests/: simple_transaction.rs
apps/lets/we-game/workdir/: dna.yaml  happ.yaml
apps/lets/we-game/zomes/lets/: Cargo.toml
apps/lets/we-game/zomes/lets/src/: lib.rs
apps/lets/we-game/zomes/lets/tests/: simple_transaction.rs
crates/mutual_credit/: Cargo.toml
crates/mutual_credit/src/: intent.rs  lib.rs  signals.rs  transaction.rs  transaction_intent.rs  utils.rs
crates/mutual_credit/src/transaction/: common.rs  entry.rs  initiator.rs  responder.rs  validation.rs
crates/mutual_credit/tests/: simple_transaction.rs
dnas/mutual_credit/types/: Cargo.toml
dnas/mutual_credit/types/src/: lib.rs
dnas/mutual_credit/workdir/: dna.yaml
dnas/mutual_credit/zomes/coordinator/profiles/: Cargo.toml
dnas/mutual_credit/zomes/coordinator/transaction_requests/: Cargo.toml
dnas/mutual_credit/zomes/coordinator/transaction_requests/src/: handlers.rs  lib.rs  utils.rs
dnas/mutual_credit/zomes/coordinator/transactions/: Cargo.toml
dnas/mutual_credit/zomes/coordinator/transactions/src/: handlers.rs  lib.rs  signals.rs  utils.rs
dnas/mutual_credit/zomes/coordinator/transactions/src/countersigning/: checks.rs  common.rs  initiator.rs  responder.rs
dnas/mutual_credit/zomes/integrity/transaction_requests/: Cargo.toml
dnas/mutual_credit/zomes/integrity/transaction_requests/src/: entry.rs  lib.rs  signals.rs  types.rs  utils.rs
dnas/mutual_credit/zomes/integrity/transactions/: Cargo.toml
dnas/mutual_credit/zomes/integrity/transactions/src/: entry.rs  lib.rs  types.rs
example/workdir/: dna.yaml  happ.yaml
example/zomes/mutual_credit/: Cargo.toml
example/zomes/mutual_credit/src/: lib.rs
example/zomes/profiles/: Cargo.toml
libs/transaction_requests/: DESIGN.md
libs/transaction_requests/crates/coordinator/: Cargo.toml
libs/transaction_requests/crates/coordinator/src/: handlers.rs  lib.rs  utils.rs
libs/transaction_requests/crates/integrity/: Cargo.toml
libs/transaction_requests/crates/integrity/src/: lib.rs
libs/transaction_requests/ui/: package.json
libs/transaction_requests/ui/src/: context.ts  index.ts  mutual-credit-service.ts  transaction-requests-client.ts  transaction-requests-store.ts  types.ts
libs/transaction_requests/ui/src/elements/: create-transaction-request.ts  pending-transaction-requests.ts  transaction-list.ts  transaction-request-detail.ts  transaction-requests-context.ts
libs/transaction_requests/zome/: Cargo.toml
libs/transaction_requests/zome/src/: entry.rs  handlers.rs  lib.rs  signals.rs
libs/transaction_requests/zome/src/countersigning/: checks.rs  initiator.rs  mod.rs  responder.rs
libs/transaction_requests/zomes/coordinator/: Cargo.toml
libs/transaction_requests/zomes/coordinator/src/: handlers.rs  lib.rs  utils.rs
libs/transaction_requests/zomes/coordinator/src/countersigning/: common.rs  initiator.rs  mod.rs  responder.rs
libs/transaction_requests/zomes/integrity/: Cargo.toml
libs/transaction_requests/zomes/integrity/src/: checks.rs  entry.rs  lib.rs  types.rs
libs/transactions/crates/coordinator/: Cargo.toml
libs/transactions/crates/coordinator/src/: handlers.rs  lib.rs  signals.rs  utils.rs
libs/transactions/crates/coordinator/src/countersigning/: checks.rs  common.rs  initiator.rs  mod.rs  responder.rs
libs/transactions/crates/integrity/: Cargo.toml
libs/transactions/crates/integrity/src/: lib.rs
libs/transactions/crates/types/: Cargo.toml
libs/transactions/crates/types/src/: lib.rs
libs/transactions/ui/: package.json  tsconfig.json
libs/transactions/ui/src/: context.ts  index.ts  transactions-client.ts  transactions-store.ts  types.ts  utils.ts
libs/transactions/ui/src/elements/: credits-in-circulation.ts  my-balance.ts  my-transaction-history.ts  transactions-context.ts
libs/transactions/zome/: Cargo.toml
libs/transactions/zome/src/: checks.rs  countersigning.rs  entry.rs  handlers.rs  lib.rs
libs/transactions/zomes/coordinator/: Cargo.toml
libs/transactions/zomes/coordinator/src/: checks.rs  countersigning.rs  handlers.rs  lib.rs  signals.rs  utils.rs
libs/transactions/zomes/coordinator/src/countersigning/: initiator.rs  responder.rs
libs/transactions/zomes/integrity/: Cargo.toml
libs/transactions/zomes/integrity/src/: checks.rs  entry.rs  lib.rs  signals.rs  types.rs
mixin/: Cargo.toml
mixin/src/: lib.rs  offer.rs  signals.rs  transaction.rs  utils.rs
tests/: Cargo.toml  package.json
tests/src/: index.ts  utils.ts
tests/src/mutual-credit/: hc_mixin_mutual_credit.ts
tests/tests/: simple_transaction.rs
tests/workdir/: dna.yaml  happ.yaml
ui/: package.json
ui/app/: index.html  package.json
ui/app/src/: holochain-app.ts
ui/applet/src/: index.ts
ui/applet/workdir/: web-happ.yaml
ui/lib/: package.json
ui/lib/demo/: index.html
ui/lib/src/: context.ts  index.ts  types.ts  utils.ts
ui/lib/src/elements/: my-offers.ts  pending-offer-list.ts
ui/lib/src/mutual_credit/transaction-requests/: context.ts  transaction-requests-client.ts  transaction-requests-store.ts  types.ts
ui/lib/src/mutual_credit/transactions/: context.ts  transactions-client.ts  transactions-store.ts  types.ts
ui/src/: index.ts  public-transactor.service.ts  transactor.store.ts  types.ts
ui/src/elements/: create-offer.ts  my-balance.ts  offer-detail.ts  transaction-list.ts
ui/src/elements/utils/: shared-styles.ts
we-game/workdir/: happ.yaml  web-happ.yaml
workdir/: happ.yaml  web-happ.yaml
