[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*", "tests"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.2.1"
hdk = "=0.1.1"
holochain = "0.1.3"
serde = "1"
transaction_types = { path = "./dnas/mutual_credit/types" }

[workspace.dependencies.profiles]
path = "dnas/mutual_credit/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/mutual_credit/zomes/integrity/profiles"

[workspace.dependencies.transaction_requests]
path = "dnas/mutual_credit/zomes/coordinator/transaction_requests"

[workspace.dependencies.transaction_requests_integrity]
path = "dnas/mutual_credit/zomes/integrity/transaction_requests"

[workspace.dependencies.transactions]
path = "dnas/mutual_credit/zomes/coordinator/transactions"

[workspace.dependencies.transactions_integrity]
path = "dnas/mutual_credit/zomes/integrity/transactions"
