[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = [
  "dnas/*/zomes/coordinator/*",
  "dnas/*/zomes/integrity/*",
  "tests",
  "libs/*/crates/*",
]
resolver = "2"

[workspace.dependencies]
hdi = "0.2"
hdk = "0.1"
holochain = "0.1.3"
serde = "1"
hc_zome_mutual_credit_transactions_types = { path = "./libs/transactions/crates/types" }
hc_zome_mutual_credit_transactions_integrity = { path = "./libs/transactions/crates/integrity" }
hc_zome_mutual_credit_transactions_coordinator = { path = "./libs/transactions/crates/coordinator" }
hc_zome_mutual_credit_transaction_requests_integrity = { path = "./libs/transaction_requests/crates/integrity" }
hc_zome_mutual_credit_transaction_requests_coordinator = { path = "./libs/transaction_requests/crates/coordinator" }
