[package]
edition = "2021"
name = "tests"
publish = false
version = "0.0.1"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
derive_more = "0"
serde = "1"

hc_zome_transaction_requests_integrity = {path = "../libs/transaction_requests/zomes/integrity"}
hc_zome_transactions_integrity = {path = "../libs/transactions/zomes/integrity"}

[dev-dependencies]
futures = {version = "0.3.1", default-features = false}
hdk = {version = "0.0.127", features = ["encoding", "test_utils"]}
holochain = {version = "0.0.132", default-features = false, features = ["test_utils"]}
tokio = {version = "1.3", features = ["full"]}
