[package]
edition = "2021"
name = "tests"
publish = false
version = "0.0.1"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
derive_more = "0"
serde = "1"

transaction_requests_integrity = { workspace = true }
transactions_integrity = { workspace = true }
transaction_types = { workspace = true }

[dev-dependencies]
futures = {version = "0.3.1", default-features = false}
hdk = { workspace = true, features = ["encoding", "test_utils"]}
holochain = { workspace = true, default-features = false, features = ["test_utils"]}
tokio = {version = "1.3", features = ["full"]}
