[package]
edition = "2021"
name = "tests"
publish = false
version = "0.0.1"

[dependencies]

[dev-dependencies]
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["test_utils"] }
holochain = { workspace = true, default-features = false, features = [
  "test_utils",
] }
tokio = { version = "1.3", features = ["full"] }

derive_more = "0"
serde = "1"

hc_zome_mutual_credit_transaction_requests_coordinator = { workspace = true }
hc_zome_mutual_credit_transaction_requests_integrity = { workspace = true }
hc_zome_mutual_credit_transactions_integrity = { workspace = true }
hc_zome_mutual_credit_transactions_types = { workspace = true }
