[package]
edition = "2018"
name = "hc_zome_mutual_credit"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_mutual_credit"

[dependencies]
serde = "1"
derive_more = "0"
chrono = {version = "0.4", features = ["serde"]}

hdk = { version = "0.0.127", features = ["encoding"] }
holo_hash = { version = "*", features = ["serialization"] }

[dev-dependencies]
futures = {version = "0.3.1", default-features = false}
hdk = {version = "0.0.127", features = ["encoding", "test_utils"]}
holochain = {version = "0.0.132", default-features = false, features = ["test_utils"]}
tokio = {version = "1.3", features = ["full"]}