[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"
name = "profiles"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles"

[dependencies]
hc_zome_profiles = {git = "https://github.com/holochain-open-dev/profiles", rev = "772210ba331d5d7525ca466ec7ed8f53f7f2a4a0", package = "hc_zome_profiles"}
