[package]
edition = "2018"
name = "lets"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "lets"

[dependencies]
derive_more = "0"
serde = "1"

hc_lib_transaction_requests = {path = "../../../../libs/transaction_requests/zome"}
hc_lib_transactions = {path = "../../../../libs/transactions/zome"}
hdk = {version = "0.0.127", features = ["encoding"]}

[dev-dependencies]
futures = {version = "0.3.1", default-features = false}
hdk = {version = "0.0.127", features = ["encoding", "test_utils"]}
holochain = {version = "0.0.132", default-features = false, features = ["test_utils"]}
tokio = {version = "1.3", features = ["full"]}
