[package]
name = "hc_zome_mutual_credit_transaction_requests_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_mutual_credit_transaction_requests_integrity"

[dependencies]
hdi = { workspace = true }
hdk = { workspace = true }

serde = { workspace = true }
