[package]
edition = "2021"
name = "hc_zome_transaction_requests_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_transaction_requests_integrity"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
derive_more = "0"
serde = "1"

hc_zome_transactions_integrity = {path = "../../../transactions/zomes/integrity"}
hdk = {version = "0.0.127", features = ["encoding"]}
