[package]
name = "hc_zome_mutual_credit_transactions_coordinator"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_mutual_credit_transactions_coordinator"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

hc_zome_mutual_credit_transactions_integrity = { workspace = true }
hc_zome_mutual_credit_transactions_types = { workspace = true }
