[package]
name = "hc_zome_mutual_credit_transactions_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_mutual_credit_transactions_integrity"

[dependencies]
hc_zome_mutual_credit_transactions_types = { workspace = true }

hdi = { workspace = true }
hdk = { workspace = true }

serde = { workspace = true }
