[package]
edition = "2021"
name = "hc_zome_transactions_coordinator"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_transactions_coordinator"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
derive_more = "0"
serde = "1"

hdk = {version = "0.0.127", features = ["encoding"]}

hc_zome_transactions_integrity = {path = "../integrity"}
